--- a/package/client/pages/drawPanel/style.css
+++ b/package/client/pages/drawPanel/style.css
@@ -4,3 +4,15 @@
   height: calc(100vh - 40px);
   position: relative;
 }
+
+.antd-th-editable:focus {
+  outline:1px solid red;
+}
+
+.antd-th-editable:hover {
+  outline: 1px dashed rgb(112, 184, 240);
+}
+
+.antd-th-editable span {
+  outline: none;
+}
